kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  namespace: torico
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
      annotations:
        appVersion: "1.0"
    spec:
      containers:
        - name: myapp
          image: torico/myapp
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
