kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: torico
spec:
  type: NodePort
  ports:
    -  port: 8000
       protocol: TCP
       targetPort: 8000
       name: myapp-http
  selector:
    app: myapp
