kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp
  namespace: torico
spec:
  tls:
    - hosts:
        - myapp.torico-tokyo.com
      secretName: tls-certificate
  rules:
    - host: myapp.torico-tokyo.com
      http:
        paths:
          - path: /
            backend:
              serviceName: myapp-service
              servicePort: 8000
